Fixed the z-index of the timer title.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,7 +88,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 100;
+  z-index: 6;
   margin: -1rem 0 0 -1rem;
 }
 
